2014-06-12  Steven Munroe  <sjmunroe@us.ibm.com>

	* ./src/sasallocpriv.h: New file.
	* ./src/sasalloc.cpp: Include sasallocpriv.h.
	(setSASFinder): Use getfastMemLow().
	(getSASFinder): Use getfastMemLow().
	(SASFindHeader): Use getfastMemLow() and getfastMemHigh().
	* ./src/sasindexnode.cpp: Include sasallocpriv.h.
	(SASIndexNodeKeyMove): Use getfastMemLow() and getfastMemHigh().
	* ./src/sasstringbtreenode.cpp: Include sasallocpriv.h.
	(SASStringBTreeNodeKeyMove): Use getfastMemLow() and
	getfastMemHigh().
	* ./src/sphcontext.cpp: Include sasallocpriv.h.
	(SPHSetupProjectContext): Use getfastMemLow().
	(SPHSetupAltProjectContext): Use getfastMemLow().
	(SPHRemoveProjectContext): Use getfastMemLow().
	(SPHDestroyProjectContext): Use getfastMemLow().
	* ./src/sasindexnode.cpp (SASIndexNodeSplit): Change short int
	to long int for performance.
	* ./src/Makefile.am (libsphdeinclude_HEADERS): Export
	sasindexnode.h for make install.
	* ./src/Makefile.in: Regenerate.

2014-06-12  Steven Munroe  <sjmunroe@us.ibm.com>

	* ./src/sassim.cpp (memLow, memHigh): Visability hidden.
	(setSASmemrange): New function. 
	* ./src/sassim.h (setSASmemrange): Extern.
	* src/tests/sphlflogger_t.c (setmemrange): Replace direct
	access to memLow/memHigh with setSASmemrange() call.
	* src/tests/sphlockfreeheap_t.c (setmemrange): Likewise.
	* src/tests/sphlogportal_t.c (setmemrange): Likewise.
	* src/tests/sphsinglepcqueue_t.c  (setmemrange): Likewise.

2014-06-06  Steven Munroe  <sjmunroe@us.ibm.com>

	* ./src/Makefile.am: Add sasstringbtree_tt to TESTS.	
	* ./src/tests/sasstringbtree_tt.c: New file.

2014-06-10 Rajalakshmi Srinivasaraghavan <raji@linux.vnet.ibm.com>

	configure.ac: propagate LDFLAGS properly.
	configure: Regenerate.
	examples/Makefile.in: Likewise.
	src/Makefile.in: Likewise.
	aclocal.m4: Likewise.
	Makefile.in: Likewise.

2014-06-02 Rajalakshmi Srinivasaraghavan <raji@linux.vnet.ibm.com>

	* src/sasindexnode.h: Define LOCK_ON and LOCK_OFF.